--- a/du-abd/mongo.html
+++ b/du-abd/mongo.html
@@ -15,7 +15,7 @@
         <script>
             var slideshow = remark.create(
                 {
-                    sourceUrl: 'du-abd--slides.md',
+                    sourceUrl: 'mongo.md',
                     ratio: "16:9",
                     countIncrementalSlides: false
                 }
