--- a/insa-ms-esd--ml/classif-demande2-correction.html
+++ b/insa-ms-esd--ml/classif-demande2-correction.html
@@ -14259,7 +14259,8 @@ a.anchor-link {
 
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Spotify">Spotify<a class="anchor-link" href="#Spotify">&#182;</a></h1>
+<h1 id="Spotify">Spotify<a class="anchor-link" href="#Spotify">&#182;</a></h1><p>Données disponibles directement <a href="spotify_dataset.csv">ici</a></p>
+
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
