--- a/tc-stats-probas/StatsProbas_TC2A_TD5.html
+++ b/tc-stats-probas/StatsProbas_TC2A_TD5.html
@@ -1173,11 +1173,23 @@ summary {
 <li>Le gérant a posé comme condition, pour augmenter le prix, qu’il y ait plus de <span class="math inline">\(60\%\)</span> des clients favorables à ce changement. Déterminer l’intervalle de confiance de la proportion à <span class="math inline">\(95\%\)</span>. Qu’en déduira le gérant ? Et s’il avait dit qu’il fallait plus de <span class="math inline">\(70\%\)</span> ?</li>
 </ul>
 </div>
-<div id="exercice-5" class="section level3">
-<h3>Exercice 5</h3>
+<div id="exercice-5---circuits-électroniques" class="section level3">
+<h3>Exercice 5 - Circuits électroniques</h3>
+<p>Nous souhaitons estimer un intervalle de confiance du gain d’un circuit électronique. On admet que le gain est distribué selon une loi normale d’espérance inconnue <span class="math inline">\(\mu\)</span> et d’écart-type connu <span class="math inline">\(\sigma=20\)</span>.Quelle doit être la taille de l’échantillon <span class="math inline">\(n\)</span> pour que la longueur de l’intervalle de confiance à <span class="math inline">\(95\%\)</span> soit égale à 4 ?</p>
+<p>On compare deux circuits électroniques, dont on veut savoir si le gain est identique entre les deux. Nous réalisons 500 mesures pour chacun des circuits, et obtenons les moyennes (<span class="math inline">\(m_i\)</span>) et écarts-type (<span class="math inline">\(s_i\)</span>) suivants :</p>
+<ul>
+<li><span class="math inline">\(m_1 = 15.1\)</span> et <span class="math inline">\(s_1 = 4.5\)</span></li>
+<li><span class="math inline">\(m_2 = 15.9\)</span> et <span class="math inline">\(s_2 = 4.4\)</span></li>
+</ul>
+<p>Peut-on dire qu’il y a une différence entre les deux avec un seuil de confiance à <span class="math inline">\(90%\)</span> ? et à <span class="math inline">\(95\%\)</span> ?</p>
 </div>
-<div id="exercice-6" class="section level3">
-<h3>Exercice 6</h3>
+<div id="exercice-6---référendum" class="section level3">
+<h3>Exercice 6 - Référendum</h3>
+<!--
+Exercices%20CORRIGES%20sur%20les%20Intervalles%20de%20confiance.pdf
+-->
+<p>On prévoit de réaliser un référendum. On sait que la réponse <em>Oui</em> se situe autour de <span class="math inline">\(50\%\)</span>. On se demande donc combien de personnes faudrait-il interroger pour que la proportion de <em>Oui</em> soit connue à <span class="math inline">\(1\%\)</span> près (en plus ou en moins).</p>
+<p>Lors de la réalisation de ce sondage, finalement pratiqué sur <span class="math inline">\(1000\)</span> personnes, nous avons obtenu <span class="math inline">\(55\%\)</span> pour le <em>Oui</em> et <span class="math inline">\(45\%\)</span> pour le <em>Non</em>. Peut-on prévoir le résultat du référendum, avec un taux de confiance de <span class="math inline">\(95\%\)</span> ?</p>
 </div>
 </div>
 
