--- a/tc-stats-probas/StatsProbas_TC2A_TP1.html
+++ b/tc-stats-probas/StatsProbas_TC2A_TP1.html
@@ -289,7 +289,7 @@ summary {
 <ul>
 <li>Fusionner les cellules <code>K1</code> et <code>L1</code>, et écrire dedans <strong>Âge</strong></li>
 <li>Ecrire en <code>K2</code> et <code>L2</code> les modalités <em>&lt;=50K</em> et * &gt;50K*</li>
-<li>En <code>K3</code>, écrire <code>MOYENNE.SI(A:A;&quot;&lt;=50K&quot;;D:D)</code> et en <code>L3</code>, écrire <code>MOYENNE.SI(A:A;&quot; &gt;50K&quot;;D:D)</code>
+<li>En <code>K3</code>, écrire <code>MOYENNE.SI(E:E;&quot;&lt;=50K&quot;;A:A)</code> et en <code>L3</code>, écrire <code>MOYENNE.SI(E:E;&quot; &gt;50K&quot;;A:A)</code>
 <ul>
 <li>Comme <code>NB.SI()</code>, <code>MOYENNE.SI()</code> réalise une moyenne de certaines cellules (ici, celles de la colonne <code>D</code> dont la ligne a la valeur “&lt;=50K” dans la colonne <code>A</code>)</li>
 </ul></li>
