--- a/tc-stats-probas/StatsProbas_TC2A_TD5-correction.html
+++ b/tc-stats-probas/StatsProbas_TC2A_TD5-correction.html
@@ -248,7 +248,7 @@ summary {
 </ul>
 <div id="solution-3" class="section level4">
 <h4>Solution</h4>
-<p>Il y a donc une proportion de <code>r</code>39/50*100` % de clients qui sont OK pour payer plus cher.</p>
+<p>Il y a donc une proportion de 78 % de clients qui sont OK pour payer plus cher.</p>
 <pre><code>## Intervalle de confiance à 5% : [0.67; 0.89]</code></pre>
 <p>Selon l’intervalle de confiance obtenu, il y a de très fortes chances qu’il y ait plus de <span class="math inline">\(60\%\)</span> des clients favorables. Le gérant peut donc augmenter son tarif.</p>
 <p>Par contre, il y a un risque que la proportion soit inférieur à <span class="math inline">\(70\%\)</span>. Si le gérant pose ceci comme limite, il ne pourra donc pas conclure à l’augmentation de son tarif.</p>
