--- a/lp-iot--python-ds/tpnote-sujet.html
+++ b/lp-iot--python-ds/tpnote-sujet.html
@@ -14486,10 +14486,10 @@ a.anchor-link {
 </ul>
 </li>
 <li>Décrire les axes en se basant sur le cercle des corrélations des variables</li>
-<li>Déterminer un nombre de classes adapté à ce jeu de données, à l'aide d'une CAH</li>
+<li>Déterminer un nombre de classes adapté à ce jeu de données</li>
 <li>Trouver la partition des chansons, avec le nombre de classes optimal obtenu ci-dessus</li>
 <li>Décrire les classes et les comparer entre elles</li>
-<li>Efectuer toutes les représentations qui vous semblent utiles pour décrire vos résultats et accompagner votre conclusion</li>
+<li>Effectuer toutes les représentations qui vous semblent utiles pour décrire vos résultats et accompagner votre conclusion</li>
 </ul>
 
 </div>
